src/objects/Subscription__c.object
<CustomObject>
    <description>Represents a Subscription to The Daily Telegraph and Sunday Telegraph.</description>
    <fields>
        <fullName>Account_MPP_Current_Pay_Schedule_End_Dat__c</fullName>
        <formula>Subscriber__r.MPP_Current_Pay_Schedule_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account MPP Current Pay Schedule End Dat</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Account_Subscriber_Number_Static__c</fullName>
        <formula>Subscriber__r.Subscriber_Number_static__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Subscriber Number Static</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Calc__c</fullName>
        <description>Trigger calculated value of the deferred asset value for this subscription</description>
        <label>Asset Calculation Value (Hidden)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Astra_Migration_Balance__c</fullName>
        <label>Astra Migration Balance</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Astra_Subscription_key__c</fullName>
        <externalId>true</externalId>
        <label>Astra Subscription key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calling_Bucket__c</fullName>
        <formula>TEXT(MOD(VALUE(Subscriber__r.Account_Unique_Ref__c), 5) +1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calling Bucket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancellation_Date_Reached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancellation Date Reached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cancellation_Date_Workflow_trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to trigger the Cancellation Date workflow trigger on existing records.</description>
        <label>Cancellation Date Workflow trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cancellation_Date__c</fullName>
        <label>Cancellation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancellation_Method__c</fullName>
        <label>Cancellation Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                <fullName>Phone</fullName>
                </value>
                <value>
                <fullName>Email</fullName>
                </value>
                <value>
                <fullName>Letter</fullName>
                </value>
                <value>
                <fullName>ADDACS Notification</fullName>
                </value>
                <value>
                <fullName>AUDDIS Notification</fullName>
                </value>
                <value>
                <fullName>DD Reject</fullName>
                </value>
                <value>
                <fullName>DDIC Report</fullName>
                </value>
                <value>
                <fullName>Task</fullName>
                </value>
                <value>
                <fullName>DD Migration Failure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancellation_Reason__c</fullName>
        <label>Cancellation Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                <fullName>Within 14 days</fullName>
                </value>
                <value>
                <fullName>Deceased</fullName>
                </value>
                <value>
                <fullName>Emigration</fullName>
                </value>
                <value>
                <fullName>Serious illness</fullName>
                </value>
                <value>
                <fullName>Poor eyesight</fullName>
                </value>
                <value>
                <fullName>Gone Away</fullName>
                </value>
                <value>
                <fullName>Review of personal finances/cannot afford</fullName>
                </value>
                <value>
                <fullName>Price Increase</fullName>
                </value>
                <value>
                <fullName>DM Mailing Error</fullName>
                </value>
                <value>
                <fullName>Competitor Offer</fullName>
                </value>
                <value>
                <fullName>Editorial Issues</fullName>
                </value>
                <value>
                <fullName>Too much to read.</fullName>
                </value>
                <value>
                <fullName>Extended Holiday</fullName>
                </value>
                <value>
                <fullName>Distribution Problems</fullName>
                </value>
                <value>
                <fullName>Unpaid Cheque</fullName>
                </value>
                <value>
                <fullName>Duplicate File</fullName>
                </value>
                <value>
                <fullName>Dislike Paper</fullName>
                </value>
                <value>
                <fullName>Salesforce Error</fullName>
                </value>
                <value>
                <fullName>Fears Commitment</fullName>
                </value>
                <value>
                <fullName>Occasional Reader</fullName>
                </value>
                <value>
                <fullName>Moved to Care Home</fullName>
                </value>
                <value>
                <fullName>Moving House (UK)</fullName>
                </value>
                <value>
                <fullName>Voucher Style</fullName>
                </value>
                <value>
                <fullName>Unknown</fullName>
                </value>
                <value>
                <fullName>Prefers online content</fullName>
                </value>
                <value>
                <fullName>Independent i</fullName>
                </value>
                <value>
                <fullName>DD Refer to Payer</fullName>
                </value>
                <value>
                <fullName>DD Cancelled by Payer</fullName>
                </value>
                <value>
                <fullName>DD No Instruction</fullName>
                </value>
                <value>
                <fullName>DD Account Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancelled_Voucher_Position__c</fullName>
        <formula>CASE(Subscription_Status__c,
&quot;Pending Cancellation&quot;,
IF(Cancellation_Date__c &gt; Today(),
                                                                        CEILING((Cancellation_Date__c - Start_Date__c) / 7),
                                                                        CEILING((Cancellation_Date__c - Start_Date__c) / 7)
                                            ),
&quot;Cancelled&quot;,
IF(Cancellation_Date__c &gt; Today(),
                                                                        CEILING((Cancellation_Date__c - Start_Date__c) / 7),
                                                                        CEILING((Cancellation_Date__c - Start_Date__c) / 7)
                                            ),
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cancelled Voucher Position</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Commitment_Concern__c</fullName>
        <label>Commitment Concern</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Cancellation_Reason__c</controllingField>
            <valueSetDefinition>
                <value>
                <fullName>Duration of Subscription (26/52 Week)</fullName>
                </value>
                <value>
                <fullName>Readership Style (Day Reader)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cur_Week_Pos_Final_Text_Hidden__c</fullName>
        <label>Cur Week Pos Final Text (Hidden)</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Pack_Outstanding_Balance__c</fullName>
        <description>Value of vouchers outstanding withing current voucher pack.</description>
        <formula>IF(Payment_Details_Received__c = true, 
   ((Voucher_Pack_Duration__c * IF(In_Low_Start_Period__c, Low_Start_Weekly_Price__c, Weekly_Price__c)) - (Current_Pack_Position__c * IF(In_Low_Start_Period__c, Low_Start_Weekly_Price__c, Weekly_Price__c))) * MAX(Quantity__c, 1)
 , 
 0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Value of vouchers outstanding withing current voucher pack.</inlineHelpText>
        <label>Current Pack Outstanding Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Pack_Position_Final__c</fullName>
        <label>Current Pack Position Final</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Pack_Position__c</fullName>
        <formula>CASE(Subscription_Status__c,
&quot;Offered&quot;, 0,
&quot;Pending&quot;, 0,
&quot;Withdrawn&quot;, 0,
&quot;Declined&quot;, 0,
IF(ISNULL(Current_Pack_Position_Final__c), If( Current_Week_Position__c/ Voucher_Pack_Duration__c =1,Voucher_Pack_Duration__c,MOD(Ceiling((Today() - Start_Date__c - Nullvalue(Voucher_Offset__c,0)) / 7),Voucher_Pack_Duration__c)), Current_Pack_Position_Final__c)
)</formula>
        <label>Current Pack Position</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Week_Position_Final__c</fullName>
        <label>Current Week Position Final</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Week_Position__c</fullName>
        <description>SB 27/11: Old:
CASE(Subscription_Status__c,
&quot;Offered&quot;, 0,
&quot;Pending&quot;, 0,
&quot;Withdrawn&quot;,0,
&quot;Declined&quot;,0,
IF(ISNULL(Current_Week_Position_Final__c), CEILING((Today() - Start_Date__c) / 7), Current_Week_Position_Final__c)
)</description>
        <formula>CASE(Subscription_Status__c, 
&quot;Offered&quot;, 0, 
&quot;Pending&quot;, 0,
&quot;Withdrawn&quot;,0,
&quot;Declined&quot;,0,
IF(ISNULL(Current_Week_Position_Final__c), CEILING((Today() - Start_Date__c + 1) / 7), Current_Week_Position_Final__c)
)</formula>
        <label>Current Week Position</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DA_Standard_Voucher_Extraction__c</fullName>
        <description>Value of vouchers supplied</description>
        <formula>NULLVALUE(Voucher_Offset__c, 0) + 
CEILING((Current_Week_Position__c - (NULLVALUE(Voucher_Offset__c,0)/7))/Voucher_Pack_Duration__c) * Voucher_Pack_Duration__c * IF(In_Low_Start_Period__c, Low_Start_Weekly_Price__c ,Weekly_Price__c) * MAX(Quantity__c, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Value of vouchers supplied</inlineHelpText>
        <label>(DA) Standard Voucher Extraction</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DD_First_Collection_Amount__c</fullName>
        <description>Copy of the DebitStream object field for first collection amount. Used in New Logic interface</description>
        <label>IF DD First Collection Hidden</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DD_Not_Completed_Payments_Sum__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Sum of DD Payments that were made within last 5 days. This field is used in Paid Until date calculation.</description>
        <inlineHelpText>Sum of DD Payments that were made within last 5 days. This field is used in Paid Until date calculation.</inlineHelpText>
        <label>DD Not Completed Payments Sum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DD_Ongoing_Collection_Amount__c</fullName>
        <description>Used to hold the ongoing collection amount for the direct debit for New Logic voucher extraction</description>
        <label>IF DD Ongoing Collection Amount Hidden</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deferred_Calc_Force_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Force deferred asset and revenue re-calc</inlineHelpText>
        <label>Deferred Calc Force Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delivery_Type__c</fullName>
        <label>Delivery Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                <fullName>HND</fullName>
                </value>
                <value>
                <fullName>OTC</fullName>
                <default>true</default>
                    <label>OTC</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Destination__c</fullName>
        <label>Destination</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Cancellation_Reason__c</controllingField>
            <valueSetDefinition>
                <value>
                <fullName>UK</fullName>
                </value>
                <value>
                <fullName>Overseas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Digital_VAT_Rate__c</fullName>
        <label>Digital VAT Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dislike_Paper_Reason__c</fullName>
        <label>Dislike Paper Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Cancellation_Reason__c</controllingField>
            <valueSetDefinition>
                <value>
                <fullName>Content</fullName>
                </value>
                <value>
                <fullName>Style- Written</fullName>
                </value>
                <value>
                <fullName>Style - Layout</fullName>
                </value>
                <value>
                <fullName>Move to Digital Content</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Cancellation_Reason__c</controllingField>
            <valueSetDefinition>
                <value>
                <fullName>13 Weeks</fullName>
                </value>
                <value>
                <fullName>26 Weeks</fullName>
                </value>
                <value>
                <fullName>52 Weeks</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Editorial_Reason__c</fullName>
        <label>Editorial Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Cancellation_Reason__c</controllingField>
            <valueSetDefinition>
                <value>
                <fullName>Brexit</fullName>
                </value>
                <value>
                <fullName>Content</fullName>
                </value>
                <value>
                <fullName>Style - Written</fullName>
                </value>
                <value>
                <fullName>Style - Layout</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <formula>Start_Date__c + ((Subscription_Duration_Number__c * 7)-1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FirstRenewal__c</fullName>
        <formula>IF(
    ISBLANK(Previous_Subscription__c) ||  ISNULL(Previous_Subscription__c) ,&apos;First Subscription&apos;, 
   If(ISBLANK(Previous_Subscription__r.Previous_Subscription__c)  ||  ISNULL(Previous_Subscription__r.Previous_Subscription__c) || Previous_Subscription__r.Is_Renewal__c=&apos;New Subscription&apos; ,&apos;First Renewal&apos;, &apos;Not First Renewal&apos;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Renewal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Class_Postage_Time_Stamp__c</fullName>
        <label>First Class Postage Time Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Class_Postage_required_from__c</fullName>
        <description>This date calculates the point at which First Class postage is required in order for the subscriber to receive their vouchers on time.</description>
        <formula>Start_Date__c - 23</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This date calculates the point at which First Class postage is required in order for the subscriber to receive their vouchers on time.</inlineHelpText>
        <label>First Class Postage required from</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gift_Box_Recipient__c</fullName>
        <description>Tells who is going to receive the Gift Pack</description>
        <inlineHelpText>Tells who is going to receive the Gift Pack</inlineHelpText>
        <label>Gift Box Recipient</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                <fullName>Gift Donor</fullName>
                </value>
                <value>
                <fullName>Gift Recipient</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gift_Donor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Donor of the Gift Subscription</description>
        <inlineHelpText>Donor of the Gift Subscription</inlineHelpText>
        <label>Gift Donor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Gift Subscriptions</relationshipLabel>
        <relationshipName>GiftDonor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gift_Pack_Book__c</fullName>
        <description>The book sent with GIft packi</description>
        <inlineHelpText>The book sent with Gift pack</inlineHelpText>
        <label>Gift Pack Book</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                <fullName>Much depends on dinner - Carolyn Hart</fullName>
                </value>
                <value>
                <fullName>No Expenses spared - Robert Winnett &amp; Gordon Rayner</fullName>
                </value>
                <value>
                <fullName>Display of lights (9) - Val Gilbert</fullName>
                </value>
                <value>
                <fullName>Am I Alone in Thinking...? - Iain Hollingshead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Holiday_Duration__c</fullName>
        <label>Holiday Duration</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Cancellation_Reason__c</controllingField>
            <valueSetDefinition>
                <value>
                <fullName>1 Month</fullName>
                </value>
                <value>
                <fullName>2-3 Months</fullName>
                </value>
                <value>
                <fullName>3-5 Months</fullName>
                </value>
                <value>
                <fullName>6 Months +</fullName>
                </value>
                <value>
                <fullName>Customer unsure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IF_11_Week_Renewal_Update_Date_Hidden__c</fullName>
        <formula>End_Date__c -78</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IF 11 Week Renewal Update Date Hidden</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IF_Active_Value__c</fullName>
        <description>This field holds the Active literal value used for updating Subscriptions</description>
        <formula>&quot;Active&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IF Active Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IF_CCA_Extraction_Date__c</fullName>
        <formula>IF(ISPICKVAL(Payment_Type__c,&apos;Credit Card&apos;) &amp;&amp;  isContinuous__c , End_Date__c - 43,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CCA Extraction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IF_DD_D03_Extraction_Date__c</fullName>
        <description>Shows the D03 extraction date for subs paid by DD.</description>
        <formula>IF(ISPICKVAL(Payment_Type__c,&apos;Direct Debit&apos;), End_Date__c - 43,null)</formula>
        <label>D03 Extraction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IF_DD_Ongoing_Date__c</fullName>
        <description>Holds the next dd extraction date (only for items past first payment) used for new logic</description>
        <label>IF_DD_Ongoing_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IF_In_Renewal_Value__c</fullName>
        <description>This field holds the In Renewal literal value used for updating Subscriptions</description>
        <formula>&quot;In Renewal&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IF In Renewal Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IF_Is_This_First_Payment__c</fullName>
        <formula>IF(AND(if_DD_Collection_Frequency__c = &quot;Annually&quot;, ((IF_Next_DD_Payment_Date__c - Start_Date__c)&lt;300) ), &quot;Y&quot;,IF(AND(if_DD_Collection_Frequency__c=&quot;Quarterly&quot;,((IF_Next_DD_Payment_Date__c - Start_Date__c) &lt; 90)),&quot;Y&quot;,IF(AND(if_DD_Collection_Frequency__c=&quot;Monthly&quot;,((DATE(YEAR(IF_Next_DD_Payment_Date__c),MONTH(IF_Next_DD_Payment_Date__c)-1,DAY(IF_Next_DD_Payment_Date__c)) - Start_Date__c) &lt; 0)) ,&quot;Y&quot;,&quot;N&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IF_Is_This_First_Payment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IF_Lapsed_Value__c</fullName>
        <description>This field holds the Lapsed literal value used for updating Subscriptions</description>
        <formula>&quot;Lapsed&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IF Lapsed Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IF_Last_Payment_Date__c</fullName>
        <description>interface field</description>
        <label>IF_Last_Payment_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IF_Next_DD_Payment_Date__c</fullName>
        <description>interface field that is populated by Apex code</description>
        <label>IF_Next_DD_Payment_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IF_Past_End_Date__c</fullName>
        <formula>IF(Next_Voucher_Batch__c &gt; End_Date__c, &quot;Y&quot;, &quot;N&quot;)</formula>
        <label>IF Past End Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IF_Previous_Price_Less__c</fullName>
        <description>Used in the new logic extract to indicate if a renewal letter or price increase should be sent based upon the previous subscription price being less than or equal to the new price</description>
        <formula>IF( Previous_Price__c &lt; 0.01, &apos;N&apos;,IF(Weekly_Price__c &gt; Previous_Price__c,&apos;Y&apos;,&apos;N&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IF_Previous_Price_Less</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IF_Voucher_Extraction_DD_Amount_c__c</fullName>
        <formula>IF( if_first_voucher_pack__c=&apos;Y&apos;,  DD_First_Collection_Amount__c , DD_Ongoing_Collection_Amount__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IF_Voucher_Extraction_DD_Amount__c</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IF_WAC_Act_Pay_Type__c</fullName>
        <description>If the subscription is offered use previous sub payment type. Otherwise for Active, In Renewal or Pending use the payment type on the sub</description>
        <formula>Case(Subscription_Status__c,&quot;Pending&quot;, IF_WAC_Pay_Type__c, &quot;Offered&quot;, Previous_Subscription__r.IF_WAC_Pay_Type__c, &quot;Active&quot;, IF_WAC_Pay_Type__c, &quot;In Renewal&quot;, IF_WAC_Pay_Type__c,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IF_WAC_Act_Pay_Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IF_WAC_Active_Exp__c</fullName>
        <description>Used to determine the end date of the currently active subscription for the subscriber - only used for active, in renewal, pending or offered. Offered uses expiry date of previous sub</description>
        <formula>IF( ISPICKVAL(Subscription_Status__c,&quot;Offered&quot;), MID(TEXT(Previous_Subscription_Expiry__c),1,4)&amp;MID(TEXT(Previous_Subscription_Expiry__c),6,2)&amp;MID(TEXT(Previous_Subscription_Expiry__c),9,2),IF(OR(ISPICKVAL(Subscription_Status__c,&quot;Active&quot;),ISPICKVAL(Subscription_Status__c,&quot;Pending&quot;),ISPICKVAL(Subscription_Status__c,&quot;In Renewal&quot;)),MID(TEXT(End_Date__c),1,4)&amp;MID(TEXT(End_Date__c),6,2)&amp;MID(TEXT(End_Date__c),9,2),&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IF_WAC_Active_Exp</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IF_WAC_Delivery_Type__c</fullName>
        <description>Used to transalate HND = 1 and OTC = 2 for WAC delivery type</description>
        <formula>CASE(Delivery_Type__c,&quot;OTC&quot;,&quot;02&quot;,&quot;HND&quot;,&quot;01&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IF_WAC_Delivery_Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IF_WAC_Fst_DD__c</fullName>
        <description>Indicatates if Last DD payment was the first payment for the subscription. Used for calculating Last Payment amount for WAC</description>
        <formula>IF(AND(if_DD_Collection_Frequency__c = &quot;Annually&quot;, ((IF_Last_Payment_Date__c - Start_Date__c)&lt;300) ), &quot;Y&quot;,IF(AND(if_DD_Collection_Frequency__c=&quot;Quarterly&quot;,((IF_Last_Payment_Date__c - Start_Date__c) &lt; 90)),&quot;Y&quot;,IF(AND(if_DD_Collection_Frequency__c=&quot;Monthly&quot;,((DATE(YEAR(IF_Last_Payment_Date__c),MONTH(IF_Last_Payment_Date__c)-1,DAY(IF_Last_Payment_Date__c)) - Start_Date__c) &lt; 0)) ,&quot;Y&quot;,&quot;N&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IF_WAC_Fst_DD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IF_WAC_Last_Pay_Date__c</fullName>
        <description>Holds the last payment date for the wac interface</description>
        <formula>IF(ISPICKVAL(Subscription_Status__c,&quot;Offered&quot;), Previous_Subscription__r.IF_WAC_Lst_Pay__c, IF(OR(ISPICKVAL(Subscription_Status__c, &quot;Active&quot;),ISPICKVAL(Subscription_Status__c,&quot;In Renewal&quot;), ISPICKVAL(Subscription_Status__c, &quot;Pending&quot;)),IF_WAC_Lst_Pay__c,&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IF_WAC_Last_Pay_Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IF_WAC_Lst_Amount__c</fullName>
        <formula>IF(OR(ISPICKVAL(Subscription_Status__c,&quot;Active&quot;), ISPICKVAL(Subscription_Status__c,&quot;In Renewal&quot;), ISPICKVAL(Subscription_Status__c,&quot;Pending&quot;)),IF(AND(ISPICKVAL(Payment_Type__c, &quot;Direct Debit&quot;), IF_WAC_Fst_DD__c=&quot;Y&quot;), DD_First_Collection_Amount__c, IF(ISPICKVAL(Payment_Type__c, &quot;Direct Debit&quot;), DD_Ongoing_Collection_Amount__c, Total_Price__c)),Null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IF_WAC_Lst_Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IF_WAC_Lst_Pay__c</fullName>
        <description>Gives last payment date on active, In Renewal or Pending subs. Is used to contribute towards IF_WC_Lasy_Pay_Date</description>
        <formula>IF(AND(ISPICKVAL(Payment_Type__c,&quot;Direct Debit&quot;),OR(ISPICKVAL(Subscription_Status__c,&quot;Active&quot;),ISPICKVAL(Subscription_Status__c,&quot;Pending&quot;),ISPICKVAL(Subscription_Status__c,&quot;In Renewal&quot;))),MID(TEXT( IF_Last_Payment_Date__c),1,4)&amp;MID(TEXT( IF_Last_Payment_Date__c),6,2)&amp;MID(TEXT(IF_Last_Payment_Date__c),9,2),IF(ISPICKVAL(Subscription_Status__c,&quot;Pending&quot;), MID(TEXT( Last_Status_Change__c),1,4)&amp;MID(TEXT(Last_Status_Change__c),6,2)&amp;MID(TEXT(Last_Status_Change__c),9,2),IF(OR(ISPICKVAL(Subscription_Status__c,&quot;Active&quot;),ISPICKVAL(Subscription_Status__c,&quot;In Renewal&quot;)),MID(TEXT( Start_Date__c),1,4)&amp;MID(TEXT(Start_Date__c),6,2)&amp;MID(TEXT(Start_Date__c),9,2),&quot;&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IF_WAC_Lst_Pay</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IF_WAC_Next_Pay_Date__c</fullName>
        <description>Used to show next payment date to WAC</description>
        <formula>MID(TEXT(IF_Next_DD_Payment_Date__c),1,4)&amp;MID(TEXT(IF_Next_DD_Payment_Date__c),6,2)&amp;MID(TEXT(IF_Next_DD_Payment_Date__c),9,2)&amp;&quot; &quot;&amp;Text(IF_Voucher_Extraction_DD_Amount_c__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IF_WAC_Next_Pay_Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IF_WAC_Pay_Type__c</fullName>
        <description>Used to calculate field for wac outbound interface - translates pay type to Wac standards</description>
        <formula>Case(Payment_Type__c , &quot;Cheque&quot;,&quot;C&quot;, &quot;Direct Debit&quot;,&quot;D&quot;,&quot;Charge Card&quot;,&quot;A&quot;, &quot;Credit Card&quot;,&quot;V&quot;,&quot;Debit Card&quot;,&quot;V&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IF_WAC_Pay_Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IF_WAC_Renewal_Price__c</fullName>
        <description>Renwal price in PENCE. Indicates the renewal price for WAC interface. Only populated where the subscription is at offered</description>
        <formula>IF( ISPICKVAL(Subscription_Status__c,&quot;Offered&quot;),Weekly_Price__c*100,NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IF_WAC_Renewal_Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IF_WAC_Subscriber_Has_Offer__c</fullName>
        <description>Populates the Document Number for WAC interface. Has a 10 if no offered subscriptions for subsriber or an 11 if offered subscriptions are available</description>
        <formula>IF( Subscriber__r.Number_of_Offered_Subscriptions__c &gt;0,&quot;11&quot;,&quot;10&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IF_WAC_Subscriber_Has_Offer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Is_Cancellation_Date_This_Week__c</fullName>
        <description>Interface field used with New Logic extract to determine if a subscription has been cancelled since the last Saturday. Used for DD cancellation letter.</description>
        <formula>IF(((TODAY()-Cancellation_Date__c)&lt;7), &apos;Yes&apos;,&apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IF Is Cancellation Date This Week</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Low_Start_Period_Flag__c</fullName>
        <description>Defines whether subscription is in low start period. Green - in, red - out. N/A when not applicable - end date missing.</description>
        <formula>IF( 
 ISNULL(Low_Start_End_Date__c), &apos;N/A&apos;,
 IF(TODAY()&gt; Low_Start_End_Date__c,
  IMAGE(&apos;/img/samples/flag_red.gif&apos;, &apos;Not in low start period.&apos;),
  IMAGE(&apos;/img/samples/flag_green.gif&apos;, &apos;In low start period.&apos;)
 )
)</formula>
        <inlineHelpText>Defines whether subscription is in low start period. Green - in, red - out. N/A when end date missing.</inlineHelpText>
        <label>In Low Start Period</label>
        <type>Text</type>
    </fields>
</CustomObject>